--- a/index.html
+++ b/index.html
@@ -19,15 +19,15 @@ body {font-size:16px;}
 <nav class="w3-sidebar w3-red w3-collapse w3-top w3-large w3-padding" style="z-index:3;width:300px;font-weight:bold;" id="mySidebar"><br>
   <a href="javascript:void(0)" onclick="w3_close()" class="w3-button w3-hide-large w3-display-topleft" style="width:100%;font-size:22px">Close Menu</a>
   <div class="w3-container">
-    <h3 class="w3-padding-64"><b>Company<br>Name</b></h3>
+    <h3 class="w3-padding-64"><b>IcTBot for AL<br><h5>by muditha madushanka</h5></b></h3>
   </div>
   <div class="w3-bar-block">
-    <a href="#" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Home</a> 
-    <a href="#showcase" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Showcase</a> 
-    <a href="#services" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Services</a> 
-    <a href="#designers" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Designers</a> 
-    <a href="#packages" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Packages</a> 
-    <a href="#contact" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Contact</a>
+    <a href="#" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Past Papers&nbsp;</a> 
+    <a href="#showcase" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Marking Schemes&nbsp;</a> 
+    <a href="#services" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Resources</a> 
+    <a href="#designers" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">TermTest Papers</a> 
+    <a href="#packages" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Tutes</a> 
+    <a href="#contact" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Notes</a>
   </div>
 </nav>
 
@@ -45,23 +45,47 @@ body {font-size:16px;}
 
   <!-- Header -->
   <div class="w3-container" style="margin-top:80px" id="showcase">
-    <h1 class="w3-jumbo"><b>Interior Design</b></h1>
-    <h1 class="w3-xxxlarge w3-text-red"><b>Showcase.</b></h1>
+    <h1 class="w3-jumbo"><b>IcTBoT for AL&nbsp;</b></h1>
+    <h1 class="w3-xxxlarge w3-text-red"><b>PastPapers.</b></h1>
     <hr style="width:50px;border:5px solid red" class="w3-round">
   </div>
   
   <!-- Photo grid (modal) -->
+  
   <div class="w3-row-padding">
-    <div class="w3-half">
-      <img src="/w3images/kitchenconcrete.jpg" style="width:100%" onclick="onClick(this)" alt="Concrete meets bricks">
-      <img src="/w3images/livingroom.jpg" style="width:100%" onclick="onClick(this)" alt="Light, white and tight scandinavian design">
-      <img src="/w3images/diningroom.jpg" style="width:100%" onclick="onClick(this)" alt="White walls with designer chairs">
+    <div class="w3-half w3-margin-bottom">
+      <ul class="w3-ul w3-light-grey w3-center">
+        <li class="w3-dark-grey w3-xlarge w3-padding-32">Sinhala Medium</li>
+        <li class="w3-padding-16">2011</li>
+        <li class="w3-padding-16">2012</li>
+        <li class="w3-padding-16">2013</li>
+        <li class="w3-padding-16">2014</li>
+        <li class="w3-padding-16">2015</li>
+		<li class="w3-padding-16">2016</li>
+        <li class="w3-padding-16">2017</li>
+        <li class="w3-padding-16">2018</li>
+        <li class="w3-padding-16">2019</li>
+        <li class="w3-padding-16">2020</li>
+		<li class="w3-padding-16">2021</li>
+        <li class="w3-padding-16">2022</li>
+      </ul>
     </div>
-
     <div class="w3-half">
-      <img src="/w3images/atrium.jpg" style="width:100%" onclick="onClick(this)" alt="Windows for the atrium">
-      <img src="/w3images/bedroom.jpg" style="width:100%" onclick="onClick(this)" alt="Bedroom and office in one space">
-      <img src="/w3images/livingroom2.jpg" style="width:100%" onclick="onClick(this)" alt="Scandinavian design">
+      <ul class="w3-ul w3-light-grey w3-center">
+        <li class="w3-red w3-xlarge w3-padding-32">English Medium</li>
+        <li class="w3-padding-16">2011</li>
+        <li class="w3-padding-16">2012</li>
+        <li class="w3-padding-16">2013</li>
+        <li class="w3-padding-16">2014</li>
+        <li class="w3-padding-16">2015</li>
+		<li class="w3-padding-16">2016</li>
+        <li class="w3-padding-16">2017</li>
+        <li class="w3-padding-16">2018</li>
+        <li class="w3-padding-16">2019</li>
+        <li class="w3-padding-16">2020</li>
+		<li class="w3-padding-16">2021</li>
+        <li class="w3-padding-16">2022</li>
+      </ul>
     </div>
   </div>
 
