--- a/index.html
+++ b/index.html
@@ -56,35 +56,33 @@ body {font-size:16px;}
     <div class="w3-half w3-margin-bottom">
       <ul class="w3-ul w3-light-grey w3-center">
         <li class="w3-dark-grey w3-xlarge w3-padding-32">Sinhala Medium</li>
-        <li class="w3-padding-16">2011</li>
-        <li class="w3-padding-16">2012</li>
-        <li class="w3-padding-16">2013</li>
-        <li class="w3-padding-16">2014</li>
-        <li class="w3-padding-16">2015</li>
-		<li class="w3-padding-16">2016</li>
-        <li class="w3-padding-16">2017</li>
-        <li class="w3-padding-16">2018</li>
-        <li class="w3-padding-16">2019</li>
-        <li class="w3-padding-16">2020</li>
-		<li class="w3-padding-16">2021</li>
         <li class="w3-padding-16">2022</li>
-      </ul>
+        <li class="w3-padding-16">2021</li>
+        <li class="w3-padding-16">2020</li>
+        <li class="w3-padding-16">2019</li>
+        <li class="w3-padding-16">2018</li>
+		<li class="w3-padding-16">2017</li>
+        <li class="w3-padding-16">2016</li>
+        <li class="w3-padding-16">2015</li>
+        <li class="w3-padding-16">2014</li>
+        <li class="w3-padding-16">2013</li>
+		<li class="w3-padding-16">2012</li>
+        </ul>
     </div>
     <div class="w3-half">
       <ul class="w3-ul w3-light-grey w3-center">
         <li class="w3-red w3-xlarge w3-padding-32">English Medium</li>
-        <li class="w3-padding-16">2011</li>
-        <li class="w3-padding-16">2012</li>
-        <li class="w3-padding-16">2013</li>
-        <li class="w3-padding-16">2014</li>
-        <li class="w3-padding-16">2015</li>
-		<li class="w3-padding-16">2016</li>
-        <li class="w3-padding-16">2017</li>
-        <li class="w3-padding-16">2018</li>
-        <li class="w3-padding-16">2019</li>
-        <li class="w3-padding-16">2020</li>
-		<li class="w3-padding-16">2021</li>
         <li class="w3-padding-16">2022</li>
+        <li class="w3-padding-16"><a href="pastpaperem/mICT_2021_E.pdf">2021</a></li>
+        <li class="w3-padding-16"><a href="pastpaperem/mICT_2020_E.pdf">2020</a></li>
+        <li class="w3-padding-16"><a href="pastpaperem/mICT_2019_E.pdf">2019</a></li>
+        <li class="w3-padding-16"><a href="pastpaperem/mICT_2018_E.pdf">2018</a></li>
+		<li class="w3-padding-16"><a href="pastpaperem/mICT_2017_E.pdf">2017</a></li>
+        <li class="w3-padding-16"><a href="pastpaperem/mICT_2016_E.pdf">2016</a></li>
+		<li class="w3-padding-16"><a href="pastpaperem/mICT_2015_E.pdf">2015</a></li>
+        <li class="w3-padding-16"><a href="pastpaperem/mICT_2014_E.pdf">2014</a></li>
+        <li class="w3-padding-16"><a href="pastpaperem/mICT_2013_E.pdf">2013</a></li>
+		<li class="w3-padding-16"><a href="pastpaperem/mICT_2012_E.pdf">2012</a></li>
       </ul>
     </div>
   </div>
