--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <title>W3.CSS Template</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins">
+<link rel="stylesheet" href="css/w3.css">
+<link rel="stylesheet" href="css/fonts.css">
 <style>
 body,h1,h2,h3,h4,h5 {font-family: "Poppins", sans-serif}
 body {font-size:16px;}
@@ -84,7 +84,7 @@ body {font-size:16px;}
         <li class="w3-padding-16"><a href="pastpaperem/mICT_2013_E.pdf">2013</a></li>
 		<li class="w3-padding-16"><a href="pastpaperem/mICT_2012_E.pdf">2012</a></li>
       </ul>
-    </div>
+    </div>	  
   </div>
 
   <!-- Modal for full size images on click-->
