--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <title>W3.CSS Template</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="css/w3.css">
-<link rel="stylesheet" href="css/fonts.css">
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins">
 <style>
 body,h1,h2,h3,h4,h5 {font-family: "Poppins", sans-serif}
 body {font-size:16px;}
@@ -98,13 +98,26 @@ body {font-size:16px;}
 
   <!-- Services -->
   <div class="w3-container" id="services" style="margin-top:75px">
-    <h1 class="w3-xxxlarge w3-text-red"><b>Services.</b></h1>
+    <h1 class="w3-xxxlarge w3-text-red"><b>Resources.</b></h1>
     <hr style="width:50px;border:5px solid red" class="w3-round">
-    <p>We are a interior design service that focus on what's best for your home and what's best for you!</p>
-    <p>Some text about our services - what we do and what we offer. We are lorem ipsum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
-    dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor
-    incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-    </p>
+   <div class="w3-row-padding">
+    <div class="w3-half w3-margin-bottom">
+      <ul class="w3-ul w3-light-grey w3-center">
+        <li class="w3-dark-grey w3-xlarge w3-padding-32">Sinhala Medium</li>
+        <li class="w3-padding-16"><a href="Resources/sGr12TG ICT.pdf">Grade 12 - Teachers Guide</a></li>
+        <li class="w3-padding-16"><a href="Resources/sGr13TG ICT.pdf">Grade 13 - Teachers Guide</a></li>
+        <li class="w3-padding-16"><a href="Resources/sOMAL ICT Resource book.pdf">Resourse Book</a></li>
+        </ul>
+    </div>
+    <div class="w3-half">
+      <ul class="w3-ul w3-light-grey w3-center">
+        <li class="w3-red w3-xlarge w3-padding-32">English Medium</li>
+        <li class="w3-padding-16"><a href="Resources/eGr12TG ICT.pdf">Grade 12 - Teachers Guide</a></li>
+        <li class="w3-padding-16"><a href="Resources/eGr13TG ICT.pdf">Grade 13 - Teachers Guide</a></li>
+        <li class="w3-padding-16"><a href="Resources/eOMAL ICT Resource book.pdf">Resourse Book</a></li>
+      </ul>
+    </div>	  
+  </div>
   </div>
   
   <!-- Designers -->
