--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ body {font-size:16px;}
     <h3 class="w3-padding-64"><b>IcTBot for AL<br><h5>by muditha madushanka</h5></b></h3>
   </div>
   <div class="w3-bar-block">
-    <a href="#" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Past Papers&nbsp;</a> 
+    <a href="#pastpaper" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Past Papers&nbsp;</a> 
     <a href="#showcase" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Marking Schemes&nbsp;</a> 
     <a href="#services" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Resources</a> 
     <a href="#designers" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">TermTest Papers</a> 
@@ -44,7 +44,7 @@ body {font-size:16px;}
 <div class="w3-main" style="margin-left:340px;margin-right:40px">
 
   <!-- Header -->
-  <div class="w3-container" style="margin-top:80px" id="showcase">
+  <div class="w3-container" style="margin-top:80px" id="pastpaper">
     <h1 class="w3-jumbo"><b>IcTBoT for AL&nbsp;</b></h1>
     <h1 class="w3-xxxlarge w3-text-red"><b>PastPapers.</b></h1>
     <hr style="width:50px;border:5px solid red" class="w3-round">
